text padding fixing; HEADER-> position fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,8 @@ blockquote {
   padding-bottom: 70px;
   background-color: white;
   text-transform: uppercase;
+  position: fixed;
+  width: 100%;
 }
 .navigation-bar.dark {
   background-color: #5d5d5d;
@@ -708,6 +710,7 @@ blockquote {
 }
 .photo-text {
   margin-top: 40px;
+  margin-left: 10px;
 }
 .photo-info-wrapper {
   display: block;
@@ -871,6 +874,8 @@ html.w-mod-js *[data-ix="scale-on-scroll"] {
     z-index: 1000;
     padding-top: 24px;
     padding-bottom: 24px;
+    position: fixed;
+    width: 100%;
   }
   .hamburger-button {
     padding: 10px;
