Fix 2 on About page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,10 @@
 <body>
     <div style="overflow: hidden;">
     {% include /header.html %}
+    <!-- Main -->
+    <div id="main">
     {{ content }}
+    </div>
     </div>
     {% include /footer.html %}
 </body>
