--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <!-- Footer -->
 <div class="div-block-27">
 	<div class="div-block-26">
-		<a href="index.html" class="brand w-nav-brand" style="height: 0px;">Sans.</a>
+		<a href="/index.html" class="brand w-nav-brand" style="height: 0px;">Sans.</a>
 		<div class="wrapper-list-links">
-			<a href="https://www.instagram.com/verasans/" target="_blank" class="fa fa-instagram footer-links" style="font-size: x-large;">&nbsp;📸</a>
-			<a href="https://www.instagram.com/sansartjournal/" target="_blank" class="fa fa-instagram footer-links" style="font-size: x-large;">&nbsp;🎨</a>
 			<a href="https://www.linkedin.com/in/verasans/" target="_blank" class="fa fa-linkedin footer-links" style="font-size: x-large;"></a>
+			<a href="https://www.instagram.com/sansartjournal/" target="_blank" class="fa fa-instagram footer-links" style="font-size: x-large;"></a>
 			<a href="https://www.behance.net/verasans" target="_blank" class="fa fa-behance footer-links" style="font-size: x-large;"></a>
-			<a href="https://dribbble.com/VeraSans" target="_blank" class="fa fa-dribbble footer-links" style="font-size: x-large;"></a>
 			<a href="https://medium.com/@VeraSans" target="_blank" class="fa fa-medium footer-links" style="font-size: x-large;"></a>
+			<a href="https://dribbble.com/VeraSans" target="_blank" class="fa fa-dribbble footer-links" style="font-size: x-large;"></a>
 		</div>
 	</div>
 </div>
