--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div data-collapse="none" data-animation="default" data-duration="400" class="navbar w-nav">
-    <a href="index.html" class="brand w-nav-brand">Sans.</a>
+    <a href="/index.html" class="brand w-nav-brand">Sans.</a>
     <nav role="navigation" class="nav-menu w-nav-menu">
       {% for item in site.navigation %}
           {% assign class = nil %}
