--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -8,7 +8,7 @@
             <div class="">
                 <h1 class="main-h1 home">Hi there,<br>Vera here.</h1>
             </div>
-            <div class="home-subhead"><p>I'm a Digital Designer based in Leuven, Belgium.</p>
+            <div class="home-subhead"><p>I'm a Product Designer passionate about illustration</p>
             </div>
         </div>
     </div>
