--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/fav/favicon-16x16.png">
     <link rel="manifest" href="{{ site.baseurl }}/img/fav/site.webmanifest">
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176740416-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-176740416-1');
+</script>
 </head>
