--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -8,7 +8,7 @@
             <div class="">
                 <h1 class="main-h1 home">Hi there,<br>Vera here.</h1>
             </div>
-            <div class="home-subhead"><p>I'm a Product Designer passionate about illustration</p>
+            <div class="home-subhead"><p>I'm a <b>Product Designer</b> who <b>designs and advocates for inclusive and accessible products</b> that shape technology for the better and push business forward. I’m also passionate about <b>illustration</b>.</p>
             </div>
         </div>
     </div>
